# softfoot-thing

./: README.md
softfoot_thing/: package.xml
softfoot_thing_description/: README.md  package.xml
softfoot_thing_description/configs/: pisa_softfoot.rviz
softfoot_thing_description/launch/: floating_foot.launch  pisa_softfoot.launch  pisa_softfoot_sdf.launch
softfoot_thing_description/meshes/collision/: ankle.stl  front_arch_back.stl  front_arch_front.stl  inner_chain.stl  outer_chain.stl
softfoot_thing_description/model/: chain_thing.urdf.xacro  softfoot_thing.gazebo.xacro  softfoot_thing.urdf.xacro  softfoot_thing_inertia.xacro
softfoot_thing_description/robot/: floating_softfoot.urdf.xacro  pisa_softfoot.urdf.xacro
softfoot_thing_description/sdf/: model.config  softfoot_thing.sdf
softfoot_thing_description/test/: mesh_test.world
softfoot_thing_description/worlds/: pisa_softfoot.world
softfoot_thing_gazebo/: README.md
softfoot_thing_gazebo/include/softfoot_thing_gazebo/: softfoot_gazebo_plugin.hpp
softfoot_thing_gazebo/src/: softfoot_gazebo_plugin.cpp
softfoot_thing_visualization/: CMakeLists.txt  README.md  package.xml
softfoot_thing_visualization/configs/: pisa_softfoot.rviz  pisa_softfoot_viz.yaml  softfoot_1.yaml  softfoot_2.yaml  softfoot_3.yaml  softfoot_4.yaml
softfoot_thing_visualization/include/softfoot_thing_visualization/: joints_estimator.h  madgwick_filter.h
softfoot_thing_visualization/launch/: pisa_softfoot_calibration.launch  pisa_softfoot_calibration_base.launch  pisa_softfoot_visualization.launch  record_bags.launch
softfoot_thing_visualization/src/: calibration_node.cpp  joints_estimator.cpp  joints_estimator_node.cpp  madgwick_filter.cpp
softfoot_thing_visualization/src/utils/: parsing_utilities.cpp
